syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package proto;

service DiscordMessage {
    rpc SendChanMessage (MessageChannel) returns (ServerResponse) {}
}

message MessageChannel {
    string subject = 1;
    string content = 2;
}

message ServerResponse {
    string message = 1;
}